<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_no_filter_selector"
        android:title="Afficher tout"
        app:showAsAction="never">

    </item>
    <item
        android:id="@+id/menu_date_selector"
        android:title="Recherche par date"
        app:showAsAction="never">
        <menu>

        </menu>
    </item>
    <item
        android:id="@+id/menu_room_selector"
        android:title="Recherche par salle"
        app:showAsAction="never">
        <menu>

        </menu>
    </item>
</menu>